New Depsgraph - Mask editor not working correctly #52840

Closed
opened 2017-09-20 03:08:51 +02:00 by Carlo Andreacchio · 8 comments

System Information
Ubuntu 17.04

Blender Version
Broken: 77dccbf481

Short description of error
Mask editor doesnt work reliably in new depsgraph (sorry @Sergey )

  1. Launch blender with new depsgraph, then press F12
  2. switch from view to mask
  3. new mask
  4. ctrl click to make 4 points
  5. alt c
  6. a - a (select all)
  7. v - a (change to auto tangents) -- This doesnt compute correctly
  8. shift drag one of the points to try and change the feather and it wont
  9. undo
  10. v - a now works
  11. shift dragging the feather now works
**System Information** Ubuntu 17.04 **Blender Version** Broken: 77dccbf481 **Short description of error** Mask editor doesnt work reliably in new depsgraph (sorry @Sergey ) 1. Launch blender with new depsgraph, then press F12 2. switch from view to mask 3. new mask 4. ctrl click to make 4 points 5. alt c 6. a - a (select all) 7. v - a (change to auto tangents) -- This doesnt compute correctly 8. shift drag one of the points to try and change the feather and it wont 9. undo 10. v - a now works 11. shift dragging the feather now works

Changed status to: 'Open'

Changed status to: 'Open'

Added subscribers: @Sergey, @candreacchio

Added subscribers: @Sergey, @candreacchio

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

Not seeing that here on OSX. Feather feathers, and V - A adds handles. Not sure if correctly but I see handles.

a.png

Not seeing that here on OSX. Feather feathers, and V - A adds handles. Not sure if correctly but I see handles. ![a.png](https://archive.blender.org/developer/F835322/a.png)

@FloridaJo are you using the new depsgraph and a nightly build? it probably needs to be newer than the 14th of september.

@FloridaJo are you using the new depsgraph and a nightly build? it probably needs to be newer than the 14th of september.
Sergey Sharybin self-assigned this 2017-09-21 09:41:04 +02:00

In #52840#461281, @candreacchio wrote:
@FloridaJo are you using the new depsgraph and a nightly build? it probably needs to be newer than the 14th of september.

Yes, using Sept 18 build bb412914fa

> In #52840#461281, @candreacchio wrote: > @FloridaJo are you using the new depsgraph and a nightly build? it probably needs to be newer than the 14th of september. Yes, using Sept 18 build bb412914fa

This issue was referenced by f320d0e0a8

This issue was referenced by f320d0e0a86207983ca4f7e7afb4fa7a140acf99

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52840
No description provided.