Fix T52840: New Depsgraph - Mask editor not working correctly